# simple_pysql

./: .gitignore  README.md  pyproject.toml  simple_pysql.py  test_simple_pysql.py
.github/workflows/: publish.yml
